crates/nexacore-types/tests/compile_fail/cannot_implement_encrypted_type_externally.stderr
error[E0277]: the trait bound `EvilType: encrypted::sealed::Sealed` is not satisfied
  --> tests/compile_fail/cannot_implement_encrypted_type_externally.rs:12:51
   |
12 | impl nexacore_types::encrypted::EncryptedType for EvilType {
   |                                                   ^^^^^^^^ the trait `encrypted::sealed::Sealed` is not implemented for `EvilType`
   |
   = help: the following other types implement trait `encrypted::sealed::Sealed`:
             AttestedHash
             EncryptedString
             MaskedSSN
             TokenizedEmail
note: required by a bound in `EncryptedType`
  --> src/encrypted.rs
   |
   | pub trait EncryptedType: sealed::Sealed + Sized {
   |                          ^^^^^^^^^^^^^^ required by this bound in `EncryptedType`
   = note: `EncryptedType` is a "sealed trait", because to implement it you also need to implement `nexacore_types::encrypted::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             nexacore_types::encrypted::EncryptedString
             nexacore_types::encrypted::MaskedSSN
             nexacore_types::encrypted::TokenizedEmail
             nexacore_types::encrypted::AttestedHash
